versions/v3.7.0/build/dts/api/bindings/pwm/ti,cc13xx-cc26xx-timer-pwm.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/pwm/ti,cc13xx-cc26xx-timer-pwm.html
original_path: build/dts/api/bindings/pwm/ti,cc13xx-cc26xx-timer-pwm.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# ti,cc13xx-cc26xx-timer-pwm

Vendor: [Texas Instruments](../../bindings.md#dt-vendor-ti)

## Description

```text
TI SimpleLink CC13xx/CC26xx GPT timer PWM Controller Node

To configure a PWM node, you first need to define a board overlay with a
pinctrl configuration for the pin on which the PWM signal should be present:

  &pinctrl {
    gpt0_pwm: gpt0_pwm {
      pinmux = <25 IOC_PORT_MCU_PORT_EVENT1>;
      bias-disable;
      drive-strength = <8>; /* in mA, can be 2, 4 or 8 */
    };
  };

Please be aware that the port event depends on the GPT instance chosen. The
following port events must be used for PWM:
  - GPT0: IOC_PORT_MCU_PORT_EVENT1
  - GPT1: IOC_PORT_MCU_PORT_EVENT3
  - GPT2: IOC_PORT_MCU_PORT_EVENT5
  - GPT3: IOC_PORT_MCU_PORT_EVENT7

Be careful not to choose a pin that is already in use on your board, this
might irreversible damage to your board as the given pin will be configured as
output and actively driven by the PWM driver.

Then enable the corresponding timer and PWM nodes and add a reference to the
pinctrl entry:

  &gpt0 {
    status = "okay";
  };

  &pwm0 {
    status = "okay";
    pinctrl-0 = <&gpt0_pwm>;
    pinctrl-names = "default";
  };

Now you can programmatically enable the PWM signal in your code:

  static const struct device *pwm = DEVICE_DT_GET(DT_NODELABEL(pwm0));

  int init_pwm(void)
  {
    uint32_t pwm_period_ns, pwm_pulse_ns;
    uint32_t pwm_duty_percent = 50U;
    uint32_t pwm_frequency = 1000U; /* 1kHz */

    if (!device_is_ready(pwm)) {
      LOG_ERR("Error: PWM device %s is not ready\n", pwm->name);
      return -ENODEV;
    }

    pwm_period_ns = NSEC_PER_SEC / pwm_frequency;
    pwm_pulse_ns = (pwm_duty_percent * pwm_period_ns) / 100;

    return pwm_set(pwm, 0, pwm_period_ns, pwm_pulse_ns, 0);
  }
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `#pwm-cells` | `int` | ```text Number of items to expect in a pwm specifier ```  This property is **required**. |
| `pinctrl-0` | `phandles` | ```text Pin configuration/s for the first state. Content is specific to the selected pin controller driver implementation. ```  This property is **required**. |
| `pinctrl-1` | `phandles` | ```text Pin configuration/s for the second state. See pinctrl-0. ``` |
| `pinctrl-2` | `phandles` | ```text Pin configuration/s for the third state. See pinctrl-0. ``` |
| `pinctrl-3` | `phandles` | ```text Pin configuration/s for the fourth state. See pinctrl-0. ``` |
| `pinctrl-4` | `phandles` | ```text Pin configuration/s for the fifth state. See pinctrl-0. ``` |
| `pinctrl-names` | `string-array` | ```text Names for the provided states. The number of names needs to match the number of states. ``` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “ti,cc13xx-cc26xx-timer-pwm” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |

## Specifier cell names

- pwm cells: channel, period, flags
